# odeint

./: .gitignore  LICENSE  README.md  odeint.cabal  repa-odeint.cabal  stack.yaml  wercker.yml
app/: Bench.hs  Lorenz.hs
src/: Odeint.hs
src/Numeric/: Odeint.hs
src/Numeric/Odeint/: Examples.hs
