name:                odeint
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Toshiki Teramura
maintainer:          toshiki.teramura@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Odeint
  build-depends:       base, hmatrix
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lorenz
  hs-source-dirs:      app
  main-is:             Lorenz.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, odeint, hmatrix
  default-language:    Haskell2010

benchmark bench_lorenz
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app
  main-is:             Bench.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, odeint, hmatrix, criterion
  default-language:    Haskell2010
